rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__fact_plus_multiplied_separate_pre_aggs.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
expression: result
---
orders__status | orders__count | customers__count
---------------+---------------+-----------------
completed      | 5             | 3               
pending        | 3             | 2               
NULL           | NULL          | 1
