rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multi_fact_partial_match_rolls_back.snap
---
source: cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
expression: result
---
customers__city | orders__count | returns__count
----------------+---------------+---------------
Boston          | 3             | 2             
Chicago         | 0             | 2             
New York        | 5             | 1
