rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multi_fact_plus_multiplied_shared_pre_agg.snap
---
source: cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
expression: result
---
customers__city | orders__count | returns__count | customers__count
----------------+---------------+----------------+-----------------
Boston          | 3             | 2              | 1               
Chicago         | 0             | 2              | 1               
New York        | 5             | 1              | 2
