rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multi_fact_plus_multiplied_shared_pre_agg_filtered.snap
---
source: cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
expression: result
---
customers__city | orders__count | returns__count | customers__count
----------------+---------------+----------------+-----------------
New York        | 4             | 1              | 1
