rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multi_fact_separate_pre_aggs_totals.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
assertion_line: 40
expression: result
---
orders__count | orders__total_amount | returns__count | returns__total_refund
--------------+----------------------+----------------+----------------------
8             | 1375.00000           | 5              | 330.00000
