rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multi_fact_whole_query_single_rollup_match.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
assertion_line: 115
expression: result
---
customers__city | orders__count | orders__total_amount | returns__count | returns__total_refund
----------------+---------------+----------------------+----------------+----------------------
Boston          | 3             | 550.00000            | 2              | 130.00000            
Chicago         | 0             | NULL                 | 2              | 100.00000            
New York        | 5             | 825.00000            | 1              | 100.00000
