rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multi_fact_whole_query_single_rollup_match_filtered.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
assertion_line: 421
expression: result
---
customers__city | orders__count | orders__total_amount | returns__count | returns__total_refund
----------------+---------------+----------------------+----------------+----------------------
New York        | 4             | 425.00000            | 1              | 100.00000
