rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multiplied_whole_query_single_rollup_match.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
assertion_line: 199
expression: result
---
orders__status | customers__count | customers__total_lifetime_value
---------------+------------------+--------------------------------
completed      | 3                | 4500.00000                     
pending        | 2                | 3000.00000                     
NULL           | 1                | 500.00000
