rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__multi_fact__multiplied_whole_query_single_rollup_match_filtered.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/multi_fact.rs
assertion_line: 491
expression: result
---
orders__status | customers__count | customers__total_lifetime_value
---------------+------------------+--------------------------------
completed      | 1                | 1000.00000                     
pending        | 1                | 1000.00000
